[tool.poetry]
name = "idena"
version = "0.2.0"
description = "Idena RPC client"
authors = ["Arash Fatahzade <fatahzade@gmail.com>"]
repository = "https://github.com/iRhonin/idena.py"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pudb = "^2019.2"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
sphinx = "^3.3.1"
sphinx-autoapi = "^1.5.1"
sphinx-rtd-theme = "^0.5.0"
tox = "^3.20.1"
invocations = "^1.4.0"
invoke = "^1.4.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
